@@ -1,3 +1,7 @@
+2010-11-12  smeghead <smeghead@users.sourceforge.jp>
+
+	* be able to hide attachment files.
+
 2010-11-11  smeghead <smeghead@users.sourceforge.jp>
 
 	* changed the encoding README.
